--- a/manage/src/page/components/AddTeamUser/index.less
+++ b/manage/src/page/components/AddTeamUser/index.less
@@ -19,6 +19,15 @@
             margin-top: 40px;
             max-height: 720px;
             overflow-y: auto;
+            .add-user-result-title {
+                color: rgba(0, 0, 0, 0.4);
+                display: flex;
+                margin-left: 30px;
+                > div {
+                    width: 100px;
+                    margin-left: 20px;
+                }
+            }
             > div {
                 margin-bottom: 12px;
                 .add-user-result-phone {
