--- a/src/page/TeamManage/index.less
+++ b/src/page/TeamManage/index.less
@@ -1,6 +1,6 @@
 .space-user {
-    min-width: 1200px;
-    padding: 28px 40px 0 40px;
+    min-width: 400px;
+    padding: 28px 40px 20px 40px;
     overflow: auto;
     .space-page-title {
         font-weight: 600;
@@ -63,6 +63,7 @@
         .space-user-form-list {
             display: flex;
             justify-content: flex-end;
+            padding-bottom: 20px;
             > div {
                 text-overflow: ellipsis;
                 white-space: nowrap;
