--- a/src/page/components/TransferTeam/index.less
+++ b/src/page/components/TransferTeam/index.less
@@ -2,6 +2,17 @@
     color: rgba(0, 0, 0, 0.64);
     font-size: 18px;
 }
+.space-describe {
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.64);
+    margin-bottom: 20px;
+}
 .creat-space-footer-button {
     text-align: right;
+}
+.form-lable-weight {
+    font-weight: 600;
+    font-size: 14px;
+    margin-bottom: 8px;
 }
