--- a/src/page/TeamManage/index.less
+++ b/src/page/TeamManage/index.less
@@ -36,6 +36,11 @@
                 border-radius: 30px;
             }
         }
+        .space-name-text {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
     }
     .space-block-title {
         font-weight: 600;
