--- a/src/page/TeamManage/index.less
+++ b/src/page/TeamManage/index.less
@@ -86,7 +86,7 @@
         .option-btn-normal {
         }
         .option-btn-delete {
-            color: #eb3639;
+            // color: #eb3639;
             font-size: 14px;
             margin-left: 16px;
         }
